--- a/_config.yml
+++ b/_config.yml
@@ -16,13 +16,11 @@
 title: blog
 email: junzew@hotmail.com
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Welcome to my blog. I occasionally write posts on computer science related topics and share my knowledge about software technology.
+  Yet I am still learning. Please leave a comment if you have any suggestion.
 baseurl: "/blog" # the subpath of your site, e.g. /blog
-url: "http://example.com" # the base hostname & protocol for your site
-twitter_username: jekyllrb
-github_username:  jekyll
+url: "http://junzew.github.io" # the base hostname & protocol for your site
+github_username:  junzew
 
 # Build settings
 markdown: kramdown
