--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: blog
+title: Blog
 email: junzew@hotmail.com
 description: > # this means to ignore newlines until "baseurl:"
   Welcome to my blog. I occasionally write posts on computer science related topics and share my knowledge about software technology.
