--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 title: Blog
-email: junzew@hotmail.com
+email: junzew at hotmail dot com
 description: > # this means to ignore newlines until "baseurl:"
   Welcome to my blog. I occasionally write posts on computer science related topics and share my knowledge about software technology.
   Yet I am still learning. Please leave a comment if you have any suggestion.
